# little_tools

./: README.md
agent/: Cargo.toml  README.md
agent/examples/: config.toml
agent/scripts/: build.ps1  build.sh  install.ps1  install.sh
agent/src/: agent.rs  config.rs  control_plane.rs  data_plane.rs  error.rs  health.rs  logging.rs  main.rs  metrics.rs  platform.rs  security.rs  server.rs  types.rs
cmdtools/: README.md  build.sh  go.mod  main.go  使用说明.md  安装步骤.txt
dayplanner/: .gitignore  CHANGELOG.md  CONVERT_ICON.md  ICON_QUICK_START.md  ICON_SETUP.md  INSTALL.md  INTEGRATION_TEST_REPORT.md  LICENSE  README.md  RELEASE_CHECKLIST.md  TESTING_GUIDE.md  TEST_RESULTS.md  TEST_SUMMARY.md  build-with-icon.bat  build-with-icon.sh  build.bat  build.sh  convert_icon.py  go.mod  package.bat  package.sh  release.bat  release.sh
dayplanner/cmd/daily-report/: icon.rc  icon.syso  main.go
dayplanner/config/: config.json  config.json.example
dayplanner/internal/integration/: integration_test.go
dayplanner/internal/model/: config.go  task.go
dayplanner/internal/repository/: config_repository.go  (+3 more)
dayplanner/scripts/: e2e_verify.go
devops_platform/: .gitignore  README.md
devops_platform/backend/: go.mod  go.sum
devops_platform/frontend/: package.json
first-mcp/: README.md  example_config.json  pytest.ini  requirements.txt  run_tests.py  server.py  test_integration.py  test_server.py
kinder_garten_english_test/: FEATURES.md  README.md  README_NEW.md  app.js  deploy.sh  index.html  learningData.js  nginx.conf  package.json  server.js  styles.css
(+104 files in other folders)
